Criado a rota para o perfil

--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -10,7 +10,7 @@
   </div>
   
   <div class="col text-center">
-    <button type="button" class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
+    <button [routerLink]="['/perfil']" class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
       CADASTRE-SE
     </button>
   </div>
