--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -1,16 +1,22 @@
 <div class="container mt-5" style="max-width: 100vh;">
-    <div class="row d-flex justify-content-center">
-      <p>
-        Lorem ipsum luctus est ultrices maecenas laoreet, lacus diam erat sociosqu libero 
-        dictum senectus, vel euismod pharetra eu suspendisse. facilisis dapibus quam sit 
-        massa quisque euismod turpis porta odio eget arcu eros curae mollis, netus augue 
-        quam litora lobortis rutrum lacinia id imperdiet primis maecenas
-      </p>
-    </div>
+  <div class="row d-flex justify-content-center">
+    <p>
+      Lorem ipsum luctus est ultrices maecenas laoreet, lacus diam erat sociosqu libero 
+      dictum senectus, vel euismod pharetra eu suspendisse. facilisis dapibus quam sit 
+      massa quisque euismod turpis porta odio eget arcu eros curae mollis, netus augue 
+      quam litora lobortis rutrum lacinia id imperdiet primis maecenas
+    </p>
   </div>
-  
-  <div class="col text-center">
+
+  <div class="col text-center mb-5">
     <button [routerLink]="['/perfil']" class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
       CADASTRE-SE
     </button>
   </div>
+</div>
+
+<div class="row">
+  <app-card></app-card>
+</div>
+
+
