--- a/projeto-interdiciplinar/src/app/shared/components/card/card.component.html
+++ b/projeto-interdiciplinar/src/app/shared/components/card/card.component.html
@@ -1,10 +1,7 @@
-<div class="col-sm-4 mb-3">
-    <div class="card">
-        <img class="card-img-top" src="assets/imagem.png" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+<div class="card">
+    <img class="card-img-top" [src]="imagem" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title" align="center">{{ titulo }}</h5>
+        <p class="card-text">{{ descricao }}</p>
     </div>
 </div>
