--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -15,8 +15,13 @@
   </div>
 </div>
 
-<div class="row">
-  <app-card></app-card>
+<div class="row" style="margin-bottom: 5rem;">
+  <div class="col-sm-4 mb-3" *ngFor="let perfil of perfis">
+    <app-card [descricao]="perfil.descricao" 
+              [titulo]="perfil.titulo"
+              [imagem]="perfil.imagem">
+    </app-card>
+  </div>
 </div>
 
 
