Criado a tela de cadastro

--- a/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
@@ -1,3 +1,88 @@
-<form>
-    <h1>sdfgsdfg</h1>
+<h4>
+    Conecte-se a outras<br>
+    pessoas.
+</h4>
+
+<form style="margin-bottom: 5rem;" class="mt-3">
+    <div class="row mb-3">
+
+        <div class="col">
+            <label for="inputEmail4">Nome *</label>    
+            <input type="text" class="form-control">
+        </div>
+
+        <div class="col">
+            <label for="inputEmail4">Email *</label>    
+            <input type="text" class="form-control">
+        </div>
+
+    </div>
+
+    <div class="row mb-3">
+        <div class="col">
+            <label for="inputEmail4">Telefone</label>    
+            <input type="text" class="form-control">
+        </div>
+        <div class="col">
+            <label for="inputEmail4">Profissão</label>    
+            <input type="text" class="form-control">
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col">
+            <label for="inputEmail4">Título</label>    
+            <input type="text" class="form-control">
+        </div>
+        <div class="col">
+            <label for="inputEmail4">Descrição</label>    
+            <input type="text" class="form-control">
+        </div>
+    </div>
+
+    <div class="row mb-3">
+
+        <div class="form-group col-md-4">
+            <label for="inputEmail4">CEP</label>    
+            <input type="text" class="form-control">
+        </div>
+
+        <div class="form-group col-md-4">
+            <label for="inputState">Estado</label>
+            <select id="inputState" class="form-control">
+                <option selected>Choose...</option>
+                <option>...</option>
+            </select>
+        </div>
+
+        <div class="form-group col-md-4">
+            <label for="inputState">Cidade</label>
+            <select id="inputState" class="form-control">
+                <option selected>Choose...</option>
+                <option>...</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+
+        <div class="form-group col-md-4">
+            <label for="inputEmail4">Endereço</label>    
+            <input type="text" class="form-control">
+        </div>
+
+        <div class="form-group col-md-4">
+            <label for="inputState">Tipo da Postagem</label>
+            <select id="inputState" class="form-control">
+                <option selected>Choose...</option>
+                <option>...</option>
+            </select>
+        </div>
+
+        <div class="form-group col-md-4 mt-4">
+            <input type="file" class="form-control-file" id="exampleFormControlFile1">
+        </div>
+
+    </div>
+
 </form>
