Iniciado validações no Formulário do Cliente

--- a/projeto-interdiciplinar/src/app/shared/components/input/input.component.html
+++ b/projeto-interdiciplinar/src/app/shared/components/input/input.component.html
@@ -1,3 +1,3 @@
-<label for="inputEmail4">{{ valor }}</label>    
+<label for="inputEmail4">{{ titulo }}</label>    
 <input type="text" class="form-control">
 
