Adicionado validações no Cadastro de Usuários

--- a/projeto-interdiciplinar/src/app/shared/components/input/input.component.html
+++ b/projeto-interdiciplinar/src/app/shared/components/input/input.component.html
@@ -1,3 +1,7 @@
 <label for="inputEmail4">{{ titulo }}</label>    
-<input type="text" class="form-control">
+<input [name]="controlName"
+       [formControlName]="controlName" 
+       [placeholder]="titulo"
+       [type]="tipoInput" 
+       class="form-control">
 
