--- a/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
@@ -3,14 +3,20 @@
     pessoas.
 </h4>
 
-<form [formGroup]="formGroup" style="margin-bottom: 5rem;" class="mt-3">
+<form  #courseForm="ngForm" [formGroup]="cadastroCliente" style="margin-bottom: 5rem;" class="mt-3">
     <div class="row mb-3">
         <div class="col">
-            <app-input titulo="Nome *" controlName="nome"></app-input>
+            <app-input titulo="Nome *"
+                       controlName="nome"
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
         <div class="col">
-            <app-input titulo="Email *" controlName="email"></app-input>
+            <app-input titulo="Email *" 
+                       controlName="email" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
     </div>
@@ -18,11 +24,17 @@
     <div class="row mb-3">
 
         <div class="col">
-            <app-input titulo="Telefone" controlName="telefone"></app-input>
+            <app-input titulo="Telefone" 
+                       controlName="telefone" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
         <div class="col">
-            <app-input titulo="Profissao" controlName="profissao"></app-input>
+            <app-input titulo="Profissao" 
+                       controlName="profissao" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
     </div>
@@ -30,11 +42,17 @@
     <div class="row mb-3">
 
         <div class="col">
-            <app-input titulo="Titulo" controlName=""></app-input>
+            <app-input titulo="Titulo" 
+                       controlName="" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
         <div class="col">
-            <app-input titulo="Descricao" controlName="descricao"></app-input>
+            <app-input titulo="Descricao" 
+                       controlName="descricao" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
     </div>
@@ -42,26 +60,39 @@
     <div class="row mb-3">
 
         <div class="form-group col-md-4">
-            <app-input titulo="CEP" controlName="cep"></app-input>
+            <app-input titulo="CEP" 
+                       controlName="cep" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
         <div class="form-group col-md-4">
-            <app-select titulo="Estado"></app-select>
+            <app-select titulo="Estado" 
+                        controlName="estado" 
+                        [formGroup]="cadastroCliente"
+                        tipoInput="text"></app-select>
         </div>
 
         <div class="form-group col-md-4">
-            <app-select titulo="Cidade"></app-select>
+            <app-select titulo="Cidade" 
+                        controlName="cidade" 
+                        [formGroup]="cadastroCliente"
+                        tipoInput="text"></app-select>
         </div>
     </div>
 
     <div class="row mb-3">
 
         <div class="form-group col-md-4">
-            <app-input titulo="Endereco" controlName="endereco"></app-input>
+            <app-input titulo="Endereco" 
+                       controlName="endereco" 
+                       [formGroup]="cadastroCliente"
+                       tipoInput="text" ></app-input>
         </div>
 
         <div class="form-group col-md-4">
-            <app-select titulo="Tipo da Postagem" controlName="tipoPostagem"></app-select>
+            <app-select titulo="Tipo da Postagem" 
+                        controlName="tipoPostagem"></app-select>
         </div>
 
         <div class="form-group col-md-4 mt-4">
@@ -70,7 +101,7 @@
 
     </div>
     <div>
-        <button class="btn btn-primary" [disabled]="!formGroup.valid">Salvar</button>
+        <button class="btn btn-primary" [disabled]="courseForm.invalid">Salvar</button>
     </div>
 
 </form>
