Criado metodo para retornar todos os usuarios

--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -19,7 +19,7 @@
 
   <!-- Cards -->
   <div class="row" style="margin-bottom: 5rem;">
-    <div class="col-sm-4 mb-3" *ngFor="let perfil of perfis">
+    <div class="col-sm-4 mb-3" *ngFor="let usuario of usuarios">
       <app-card [descricao]="perfil.descricao" 
                 [titulo]="perfil.titulo"
                 [imagem]="perfil.imagem">
