--- a/projeto-interdiciplinar/src/app/shared/components/card/card.component.html
+++ b/projeto-interdiciplinar/src/app/shared/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <img class="card-img-top" [src]="imagem" alt="Card image cap">
+    <img style="background-size: cover;    " class="card-img-top" [src]="imagemPadrao" alt="Card image cap">
     <div class="card-body" align="center">
         <h5 class="card-title" style="width: 100%; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ nome }}</h5>
         <p class="card-text">{{ relato }}</p>
