Criado a pagina Cadastro

--- a/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
@@ -1,4 +1,4 @@
-<h4>
+<!--<h4>
     Conecte-se a outras<br>
     pessoas.
 </h4>
@@ -165,4 +165,37 @@
         <button class="btn btn-primary" [disabled]="!cadastroCliente.valid">Salvar</button>
     </div>
 
-</form>
+</form> -->
+
+
+<div class="row">
+
+    <h3 style="margin-top: 10vh; color: #00B2FF;" align="center">Escolha o tipo de cadastro.</h3>
+    <div class="col-md-6 mt-5 mb-5">
+        <div class="row">
+
+            <div class="col-md-6">
+                <img height="200px" width="200px" src="assets/imagem.png">
+            </div>
+    
+            <div class="col-md-6">
+                <span style="font-size: 30px;">Usuário</span><br>
+                <button style="margin-top: 5vh; background-color: #00B2FF; border-color: #00B2FF;" class="btn btn-primary">QUERO FAZER PARTE</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-6 mt-5">
+        <div class="row">
+
+            <div class="col-md-6">
+                <img height="200px" width="200px" src="assets/imagem.png">
+            </div>
+    
+            <div class="col-md-6">
+                <span style="font-size: 30px;">Psicólogo</span><br>
+                <button style="margin-top: 5vh; background-color: #00B2FF; border-color: #00B2FF;" class="btn btn-primary">QUERO FAZER PARTE</button>
+            </div>
+        </div>
+    </div>
+</div>
