--- a/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
@@ -4,7 +4,7 @@
 </h4>
 
 <form [formGroup]="cadastroCliente" style="margin-bottom: 5rem;" class="mt-3">
-    
+    {{cadastroCliente.invalid}}
     <div class="row mb-3">
         <div class="col">
             <div class="form-group" [ngClass]="aplicaCssErro('nome')">
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div> 
-
+    
     <div class="row mb-3">
         <div class="col">
             <div class="form-group" [ngClass]="aplicaCssErro('sobreMim')">
@@ -73,19 +73,14 @@
         <div class="form-group col-md-4">
             <div class="form-group" [ngClass]="aplicaCssErro('tipo')">
                 <label for="inputState">Tipo</label>
-                <input  type="text"
-                        class="form-control"
-                        formControlName="tipo"
-                        id="tipo">
-
-                <app-campo-control-erro 
-                    [mostrarErro]="verificaValidTouched('tipo')" 
-                    msgErro="Tipo é obrigatório.">
-                </app-campo-control-erro>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                </select>
             </div>
         </div>
 
-        <div class="form-group col-md-4">
+    <!--    <div class="form-group col-md-4">
             <div class="form-group" [ngClass]="aplicaCssErro('estado')">
                 <label for="inputState">Estado</label>
                 <select id="inputState" class="form-control">
@@ -103,18 +98,18 @@
                     <option>...</option>
                 </select>
             </div>
-        </div>
+        </div> -->
     </div>
 
-    <div class="row mb-3">
+  <!--  <div class="row mb-3">
 
         <div class="form-group col-md-4 mt-4">
             <input style="background-color: white;" type="file" class="form-control-file" id="exampleFormControlFile1">
         </div>
-    </div>
+    </div> -->
     
     <div>
-        <button class="btn btn-primary" [disabled]="!cadastroCliente.valid">Salvar</button>
+        <button class="btn btn-primary" [disabled]="cadastroCliente.invalid">Salvar</button>
     </div>
 
 </form>
