Alterado campo isAnonimo para tipo

--- a/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
@@ -3,7 +3,7 @@
     experiências.
 </h4>
 
-<form [formGroup]="cadastroCliente" style="margin-bottom: 5rem;" class="mt-3">
+<form [formGroup]="cadastroCliente" style="margin-bottom: 5rem;" class="mt-3" (ngSubmit)="onSubmit()">
     {{cadastroCliente.invalid}}
     <div class="row mb-3">
         <div class="col">
