--- a/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
@@ -1,135 +1,1 @@
-<h4>
-    Compartilhe a suas<br>
-    experiências.
-</h4>
-
-<form [formGroup]="cadastroCliente" style="margin-bottom: 5rem;" class="mt-3" (ngSubmit)="onSubmit()">
-    {{cadastroCliente.invalid}}
-    <div class="row mb-3">
-        <div class="col">
-            <div class="form-group" [ngClass]="aplicaCssErro('nome')">
-                <label for="inputState">Nome</label>
-                <input type="text"
-                        class="form-control"
-                        formControlName="nome"
-                        id="nome">
-
-                <app-campo-control-erro 
-                    [mostrarErro]="verificaValidTouched('nome')" 
-                    msgErro="Nome é obrigatório.">
-                </app-campo-control-erro>
-            </div>
-        </div>
-    
-        <div class="col">
-            <div class="form-group" [ngClass]="aplicaCssErro('profissao')">
-                <label for="inputState">Profissao</label>
-                <input  type="text"
-                        class="form-control"
-                        formControlName="profissao"
-                        id="profissao">
-
-                <app-campo-control-erro 
-                    [mostrarErro]="verificaValidTouched('profissao')" 
-                    msgErro="Profissão é obrigatório.">
-                </app-campo-control-erro>
-            </div>
-        </div>
-    </div> 
-    
-    <div class="row mb-3">
-        <div class="col">
-            <div class="form-group" [ngClass]="aplicaCssErro('sobreMim')">
-                <label for="inputState">Sobre mim</label>
-                <input  type="text"
-                        class="form-control"
-                        formControlName="sobreMim"
-                        id="sobreMim">
-
-                <app-campo-control-erro
-                    [mostrarErro]="verificaValidTouched('sobreMim')" 
-                    msgErro="Sobre mim é obrigatório.">
-                </app-campo-control-erro>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="form-group" [ngClass]="aplicaCssErro('relato')">
-                <label for="inputState">Relato</label>
-                <input  type="text"
-                        class="form-control"
-                        formControlName="relato"
-                        id="relato">
-
-                <app-campo-control-erro 
-                    [mostrarErro]="verificaValidTouched('relato')" 
-                    msgErro="Relato é obrigatório.">
-                </app-campo-control-erro>
-            </div>
-        </div>
-    </div>
-
-    <div class="row mb-3">  
-        <div class="form-group col-md-4">
-            <div class="form-group" [ngClass]="aplicaCssErro('tipo')">
-                <label for="inputState">Tipo</label>
-                <select id="inputState" class="form-control" formControlName="tipo">
-                    <option value="0" selected>Público</option>
-                    <option value="1">Anônimo</option>
-                </select>
-            </div>
-
-            <app-campo-control-erro 
-                [mostrarErro]="verificaValidTouched('tipo')" 
-                msgErro="Tipo é obrigatório.">
-            </app-campo-control-erro>
-        </div>
-
-        <div class="form-group col-md-4">
-            <div class="form-group" [ngClass]="aplicaCssErro('estado')">
-                <label for="inputState">Estado</label>
-                <select id="inputState" class="form-control" formControlName="estado">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                </select>
-
-                <app-campo-control-erro 
-                    [mostrarErro]="verificaValidTouched('estado')" 
-                    msgErro="Estado é obrigatório.">
-                </app-campo-control-erro>
-            </div>
-        </div>
-
-        <div class="form-group col-md-4">
-            <div class="form-group" [ngClass]="aplicaCssErro('cidade')">
-                <label for="inputState">Cidade</label>
-                <select id="inputState" class="form-control" formControlName="cidade">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                </select>
-
-                <app-campo-control-erro 
-                    [mostrarErro]="verificaValidTouched('cidade')" 
-                    msgErro="Cidade é obrigatório.">
-                </app-campo-control-erro>
-            </div>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-
-        <div class="form-group col-md-4 mt-4">
-            <input style="background-color: white;" formControlName="imagem" type="file" class="form-control-file" id="exampleFormControlFile1">
-        </div>
-
-        <app-campo-control-erro 
-            [mostrarErro]="verificaValidTouched('imagem')" 
-            msgErro="Imagem é obrigatório.">
-        </app-campo-control-erro>
-    </div> 
-    
-    <div>
-        <button class="btn btn-primary" [disabled]="cadastroCliente.invalid">Salvar</button>
-    </div>
-
-</form>
+<p>usuario works!</p>
