Criado a pages postagens e o modulo

--- a/projeto-interdiciplinar/src/app/shared/components/navbar/navbar.component.html
+++ b/projeto-interdiciplinar/src/app/shared/components/navbar/navbar.component.html
@@ -16,6 +16,12 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
+                <a [routerLink]="['usuarios']" routerLinkActive='active' class="nav-link"><b>POSTAGENS</b></a>
+            </li>
+        </ul>
+
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
                 <a [routerLink]="['cadastro']" routerLinkActive='active' class="nav-link"><b>CADASTRE-SE</b></a>
             </li>
         </ul>
