Criado a rota do usuario pelo id

--- a/projeto-interdiciplinar/src/app/shared/components/card/card.component.html
+++ b/projeto-interdiciplinar/src/app/shared/components/card/card.component.html
@@ -3,7 +3,7 @@
     <div class="card-body" align="center">
         <h5 class="card-title" style="width: 100%; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ nome }}</h5>
         <p class="card-text">{{ relato }}</p>
-        <button class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
+        <button [routerLink]="['/usuario', id]" class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
             SAIBA MAIS
         </button>
     </div>
