Adicionado link de rota no botão cadastrar das postagens

--- a/projeto-interdiciplinar/src/app/shared/pages/postagem/postagem.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/postagem/postagem.component.html
@@ -12,7 +12,7 @@
   
     <!-- Button -->
     <div class="col text-center mb-5">
-      <button [routerLink]="['/perfil']" class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
+      <button [routerLink]="['/cadastro/usuario']" class="btn btn-primary" style="background-color: #00B2FF; border-color: #00B2FF; border-radius: 10rem;">
         CADASTRE-SE
       </button>
     </div>
