Criado efeito hover para os button dos cards do usuario

--- a/projeto-interdiciplinar/src/app/shared/components/card/card.component.css
+++ b/projeto-interdiciplinar/src/app/shared/components/card/card.component.css
@@ -23,3 +23,16 @@ h5 {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.btn {
+    background-color: #00B2FF; 
+    border-color: #00B2FF; 
+    border-radius: 10rem; 
+    color: white;
+}
+
+.btn:hover {
+    background-color: white; 
+    border-color: #00B2FF; 
+    color: #00B2FF;
+}
