--- a/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
@@ -4,13 +4,13 @@
         <div class="row">
 
             <div class="col-xs-8 col-sm-6 col-md-5 col-lg-3 circle">
-                <img src="{{ 'assets/imagem.png' }}">
+                <img src="{{ usuario?.imagem }}">
             </div>
 
             <div class="col-xs-4 col-sm-6 col-md-7 col-lg-9">
-                <h3>{{ usuario.nome }}</h3>
-                <h5>{{ usuario.profissao }}</h5>
-                <h5>{{ usuario.cidade }}, {{ usuario.estado }} - Brasil</h5>
+                <h3>{{ usuario?.nome }}</h3>
+                <h5>{{ usuario?.profissao }}</h5>
+                <h5>{{ usuario?.cidade }}, {{ usuario?.estado }} - Brasil</h5>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            {{ usuario.sobreMim }}
+            {{ usuario?.sobreMim }}
         </div>
     </div>
 
@@ -31,7 +31,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            {{ usuario.relato }}
+            {{ usuario?.relato }}
         </div>
     </div>
 </div>
