Criado filtro para a Home do projeto

--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -17,3 +17,15 @@
         <img style="border-radius: 5px;" width="320px" height="150px" src="assets/image-home.png">
     </div>
 </div>
+
+<div class="row">
+    <div class="form-group row">
+
+        <label class="col-sm-1 col-form-label">Filtre por:</label>
+    
+        <div class="col-sm-11">
+            <input placeholder="Nome, profissão e descrição" class="form-control">
+        </div>
+    
+    </div>
+</div>
