--- a/projeto-interdiciplinar/src/app/shared/pages/postagem/postagem.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/postagem/postagem.component.html
@@ -23,7 +23,8 @@
         <app-card [relato]="usuario.relato" 
                   [nome]="usuario.nome"
                   [imagem]="usuario.imagem"
-                  [id]="usuario.id">
+                  [id]="usuario.id"
+                  [qualTipo]="this.u">
         </app-card>
       </div>
     </div>
