--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -1,42 +1,38 @@
-<div class="row">
+<div class="container mt-5" style="max-width: 60vw;">
 
-    <div class="col-sm-4 col-md-6 col-lg-8">
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-            has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
-            took a galley of type and scrambled it to make a type specimen book. It has survived not 
-            only five centuries, but also the leap into electronic typesetting, remaining essentially 
-            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
-            Lorem unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
-            Lorem unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
-            Lorem
-        </p>
+    <div class="row">
+
+        <div class="col-sm-12 col-md-12 col-lg-8">
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
+                took a galley of type and scrambled it to make a type specimen book. It has survived not 
+                only five centuries, but also the leap into electronic typesetting, remaining essentially 
+                unchanged. It was popularised
+            </p>
+        </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-4">
+            <img style="border-radius: 5px;" width="100%" height="100%" src="assets/image-home.png">
+        </div>
     </div>
 
-    <div class="col-sm-8 col-md-6 col-lg-4">
-        <img style="border-radius: 5px;" width="320px" height="150px" src="assets/image-home.png">
-    </div>
-</div>
-
-<div class="row">
-    <div class="form-group row">
-
-        <label class="col-sm-1 col-form-label">Filtre por:</label>
-    
-        <div class="col-sm-11">
+    <div class="row">
+        <div class="input-group mb-3">
+            <label style="margin-top: 0.5rem; margin-right: 1rem;">Filtre por:</label>
             <input placeholder="Nome, profissão e descrição" class="form-control">
         </div>
-    
     </div>
-</div>
 
-<!-- Cards -->
-<div class="row" style="margin-bottom: 5rem;">
-    <div class="col-sm-4 mb-3" *ngFor="let psicologo of psicologos">
-        <app-card [relato]="psicologo.experiencia" 
-                [nome]="psicologo.nome"
-                [imagem]="psicologo.imagem"
-                [id]="psicologo.id">
-        </app-card>
+    <!-- Cards -->
+    <div class="row mt-4" style="margin-bottom: 5rem;">
+        <div class="col-sm-4 mb-3" *ngFor="let psicologo of psicologos">
+            <app-card [relato]="psicologo.experiencia" 
+                    [nome]="psicologo.nome"
+                    [imagem]="psicologo.imagem"
+                    [id]="psicologo.id"
+                    [qualTipo]="this.p">
+            </app-card>
+        </div>
     </div>
 </div>
