--- a/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/cadastro/cadastro.component.html
@@ -1,30 +1,32 @@
-<div class="row">
+<div class="container mt-5" style="max-width: 60vw;">
+    <div class="row">
 
-    <h3 style="margin-top: 10vh; color: #00B2FF;" align="center">Escolha o tipo de cadastro.</h3>
-    <div class="col-md-6 mt-5 mb-5">
-        <div class="row">
+        <h3 style="margin-top: 6vh; color: #00B2FF;" align="center">Escolha o tipo de cadastro.</h3>
+        <div class="col-md-6 mt-5 mb-5">
+            <div class="row">
 
-            <div class="col-md-6">
-                <img height="200px" width="200px" src="assets/imagem.png">
-            </div>
-    
-            <div class="col-md-6">
-                <span style="font-size: 30px;">Usuário</span><br>
-                <button [routerLink]="['/cadastro/usuario']" style="margin-top: 5vh; background-color: #00B2FF; border-color: #00B2FF;" class="btn btn-primary">QUERO FAZER PARTE</button>
+                <div class="col-md-6">
+                    <img height="200px" width="200px" src="assets/usuario.jpg">
+                </div>
+        
+                <div class="col-md-6">
+                    <span style="font-size: 30px;">Usuário</span><br>
+                    <button [routerLink]="['/cadastro/usuario']" style="margin-top: 5vh" class="btn btn-primary">QUERO FAZER PARTE</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-md-6 mt-5">
-        <div class="row">
+        <div class="col-md-6 mt-5" style="border-left: 1px solid rgba(0, 178, 255, .3);">
+            <div class="row">
 
-            <div class="col-md-6">
-                <img height="200px" width="200px" src="assets/imagem.png">
-            </div>
-    
-            <div class="col-md-6">
-                <span style="font-size: 30px;">Psicólogo</span><br>
-                <button [routerLink]="['/cadastro/psicologo']" style="margin-top: 5vh; background-color: #00B2FF; border-color: #00B2FF;" class="btn btn-primary">QUERO FAZER PARTE</button>
+                <div class="col-md-6">
+                    <img height="200px" width="200px" src="assets/psicologa.jpg">
+                </div>
+        
+                <div class="col-md-6">
+                    <span style="font-size: 30px;">Psicólogo</span><br>
+                    <button [routerLink]="['/cadastro/psicologo']" style="margin-top: 5vh" class="btn btn-primary">QUERO FAZER PARTE</button>
+                </div>
             </div>
         </div>
     </div>
