--- a/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.css
+++ b/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.css
@@ -8,11 +8,15 @@ img{
 .meu-hr {
     display: flex;
     align-items: center;
-	color: rgba(0, 0, 0, 0.35);
+	color: rgba(0, 0, 0, 0.50);
 }
 
 .meu-hr hr {
     flex: 1;
     margin-left: .5em;
     margin-bottom: 1.8em;
+}
+
+p {
+    color: rgba(0, 0, 0, 0.50);
 }
