Adicionado icon de rede sociais na pagina do Psicologo

--- a/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
@@ -33,6 +33,17 @@
         </div>
     </div>
 
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 mt-3" style="align-self: flex-end;">
+        <div style="display: flex; justify-content: space-around;">
+            <p style="font-size: 11px">
+                Compartilhe
+                <a href="https://www.whatsapp.com/?lang=pt_br" target="_black"><i class="fab fa-whatsapp circle-icon color-watz"></i></a>
+                <a href="{{ psicologo?.facebook }}" target="_black"><i class="fab fa-facebook-f circle-icon color-face"></i></a>
+                <a href="https://mail.google.com/" target="_black"><i class="fa fa-envelope circle-icon color-email"></i></a>
+            </p>
+        </div>
+    </div>
+
     <div class="meu-hr mt-1">
         <p>SOBRE MIM</p><hr>
     </div>
