--- a/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.css
+++ b/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.css
@@ -20,3 +20,57 @@ img{
 p {
     color: rgba(0, 0, 0, 0.50);
 }
+
+.circle-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    padding: 5px;
+    margin-left: 0.5vw;
+}
+
+.color-watz {
+    color: white;
+    background: #00b800;
+}
+
+.color-face {
+    color: white;
+    background: #3b5998;
+}
+
+.color-email {
+    color: red;
+    background: white;
+    border-color: red;
+    border: solid 0.1em;
+}
+
+.color-watz:hover {
+    cursor: pointer;
+    color: #00b800;
+    background: white;
+    border-color: #00b800;
+    border: solid 0.1em;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.color-face:hover {
+    cursor: pointer;
+    color: #3b5998;
+    background: white;
+    border-color: #3b5998;
+    border: solid 0.1em;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.color-email:hover {
+    cursor: pointer;
+    color: white;
+    background: red;
+    border-color: white;
+    border: solid 0.1em;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
