--- a/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/home/home.component.html
@@ -22,7 +22,7 @@
             <label style="margin-top: 0.5rem; margin-right: 1rem;">Filtre por:</label>
             <input [(ngModel)]="filter" placeholder="Nome" class="form-control">
         </div>
-    </div>{{filter}}
+    </div>
 
     <!-- Cards -->
     <div class="row mt-4" style="margin-bottom: 5rem;">
