--- a/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
@@ -60,7 +60,9 @@
 
     <div class="row">
         <div class="col-md-12">
-           
+            <p *ngFor="let xp of experiencias">
+               {{ xp }}
+            </p>
         </div>
     </div>
 </div>
