--- a/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-5">
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 mt-3">
         <div class="row">
@@ -54,14 +54,14 @@
         </div>
     </div>
 
-    <div class="meu-hr mt-3">
+    <div class="meu-hr mt-5">
         <p>EXPERIÊNCIAS</p><hr>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <p *ngFor="let xp of experiencias">
-               {{ xp }}
+    <div class="row mb-4">
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 mb-3" *ngFor="let xp of experiencias" align="center">
+            <p class="component-p">
+                {{ xp }}
             </p>
         </div>
     </div>
